--- a/angular-case-study/src/index.html
+++ b/angular-case-study/src/index.html
@@ -6,7 +6,11 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-
+  <script src="https://kit.fontawesome.com/bdd89edb33.js"></script>
+  <link
+    href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900"
+    rel="stylesheet"
+  />
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
